# TensorAlgorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generator.py  main.cpp  performance_generator.py  test.json  test2.json  test3.json
cmake/: debug_release.cmake
py/: performance_generator.py  plotter.py  test_generator.py
src/: main.cpp  parser.cppm
tensor/: CMakeLists.txt  tensor.cppm
tensor/kernels/: im2colKernel.cl  naiveKernel.cl  winogradKernel.cl
tensor/src/: opencl.cppm  tensor.cppm  tensor_benchmark.cppm  tensor_conv.cppm  tensor_io.cppm
tests/: generate.sh  randomizer.py
tests/tester/: CMakeLists.txt  README.md  tester_config.cmake
tests/tester/cmake/: colors.cmake  ctest.cmake  gtest.cmake  tester_script.py
tests/unit/: unit_tensor_conv.cpp
